# live-wallpapers

./: Cargo.toml  README.md
src/: lib.rs  live.rs  main.rs
src/drawing/: beauty_math.rs  colors.rs  mod.rs  primitives.rs
src/live/: app.rs  bacteries.rs  bacteries_processing.rs  genome.rs  genome_processing.rs  graphics.rs  physics.rs  save_load.rs  spatial_hash.rs  utils.rs
