[package]
name = "live-wallpapers"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.2.2"
micromath = { version = "2.0.0", features = ["vector"] }
once_cell = "1.18.0"
rand = "0.8.5"
rapier2d = "0.17.2"
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi", "libloaderapi", "errhandlingapi", "impl-default"] }
